fix: mobile overflow content - header

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -679,7 +679,7 @@ select:focus-within {
   min-width: 9ch;
   max-width: 30ch;
   border-radius: 0.25em;
-  padding: 0.25em 0.5em;
+  padding: 0.25em;
   font-size: 1rem;
   cursor: pointer;
   line-height: 1.1;
@@ -885,9 +885,12 @@ input[type=date]::before {
 }
 
 .filter-new {
-  gap: 1rem;
-  flex: 1 1 50%;
   width: 100%;
+}
+@media screen and (min-width: 22.5rem) {
+  .filter-new {
+    flex: 1 1 50%;
+  }
 }
 
 .wrapper-intro {
