--- a/src/sass/components/_select.scss
+++ b/src/sass/components/_select.scss
@@ -12,17 +12,13 @@ select {
 .select-wrapper {
     min-width: 9ch;
     max-width: 30ch;
-    // border: 1px solid firebrick;
     border-radius: 0.25em;
-    padding: 0.25em 0.5em;
+    padding: 0.25em;
     font-size: 1rem;
     cursor: pointer;
     line-height: 1.1;
-    // background-color: #fff;
-    // background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
     position: relative;
     display: grid;
-    // grid-template-columns: 1fr 1fr;
     justify-content: center;
     align-items: center;
 
